# tree-sitter-jsonl

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-jsonl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jsonl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJsonl/: jsonl.h
bindings/swift/TreeSitterJsonlTests/: TreeSitterJsonlTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
