[package]
name = "tree-sitter-jsonl"
description = "Tree-sitter grammar for JSONL"
version = "0.1.0"
authors = ["Kristofers Solo <dev at kristofers dot xyz>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "jsonl"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://codeberg.org/kristoferssolo/tree-sitter-jsonl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
